k8s/services/catalog/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: mv100
spec:
  type: ClusterIP
  selector:
    app: catalog
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
